# xon-aperiodic-pipeline

./: .gitignore  LICENSE  README.md  Start Here (Mac).command  Start Here (Windows).bat  environment.yml  pyproject.toml  requirements.txt  run.bat  run.sh  update.py
config/: config.yaml  manifest_example.csv
docs/: ANALYSIS_REVIEW.md  GETTING_STARTED.md  METHODS.md  PIPELINE_WALKTHROUGH.md  SETTINGS.md  USAGE.md
examples/: generate_synthetic_data.py
examples/sample_outputs/: cohort_report.html  gallery.html  master_everything.csv  qc_report_P001_S1_rest.html
examples/sample_outputs/per_recording/: aperiodic_results_P001_S1_rest.csv  durationcurve_P001_S1_rest.csv  epoch_qc_P001_S1_rest.csv  peak_table_P001_S1_rest.csv  qc_report_P001_S1_rest.html  qc_report_P001_S2_rest.html  qc_report_P002_S1_rest.html  qc_report_P002_S2_rest.html  qc_report_P003_S1_rest.html  qc_report_P003_S2_rest.html  qc_report_P004_S1_rest.html  qc_report_P004_S2_rest.html  qc_report_P005_S1_rest.html  qc_report_P005_S2_rest.html  qc_report_P006_S1_rest.html  qc_report_P006_S2_rest.html
examples/sample_outputs/statistics/: stats_quality.csv  stats_regional.csv  stats_reliability.csv  stats_reliability_by_duration.csv  stats_summary.csv
src/xon_aperiodic/: __init__.py  artifacts.py  batch.py  cli.py  config.py  diagnostics.py  epoching.py  gui.py  gui_web.py  io_xdf.py  logging_utils.py  metadata.py  pipeline.py  preprocess.py  spectral.py
src/xon_aperiodic/reporting/: __init__.py  export.py  figures.py  gallery.py  report.py  (+1 more)
tests/: conftest.py  test_pipeline.py  test_updater.py
